docs: fix dark theme to readability

--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -21,12 +21,22 @@
 [data-theme='dark'] {
   --ifm-color-primary: #203890;
   --ifm-color-primary-dark: #203890;
-  --ifm-color-primary-darker: #292C87;
-  --ifm-color-primary-darkest: #292C87;
+  --ifm-color-primary-darker: #FF0000;
+  --ifm-color-primary-darkest: #FF0000;
   --ifm-color-primary-light: #203890;
   --ifm-color-primary-lighter: #203890;
   --ifm-color-primary-lightest: #203890;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  --ifm-breadcrumb-color-active: #FFF;
+  --ifm-navbar-link-hover-color: #dc4e4b;
+  --ifm-menu-color-active: #dc4e4b;
+  --ifm-link-hover-color: #dc4e4b;
+  --ifm-link-color: #dc4e4b;
+
+  .table-of-contents__link:hover, .table-of-contents__link:hover code, .table-of-contents__link--active, .table-of-contents__link--active code {
+    color: #dc4e4b;
+  }
 }
 
 .header-github-link:hover {
@@ -124,6 +134,6 @@ a.try-it {
 }
 
 
-footer a:hover, footer a:active {
+footer.footer a:hover, footer.footer a:active {
   color: #FFF !important;
 }
